[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test"
version = "0.2.0"
description = "Test Test Test"
authors = ["Jiseng Hong"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JiseungHong/test"
include = ["poetry.lock"]
packages = [
    { include = "openhands_resolver" },
]

[tool.poetry.dependencies]
python = "^3.12"
openhands-ai = "^0.11.0"
pandas = "^2.2.3"
pytest = "^8.3.3"
firebase-admin = "^6.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ruff = "*"
black = "*"
types-requests = "*"
pre-commit = "*"
types-toml = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"
